# benchmark-notebook

./: .env  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
experiments/1/: notebook.ipynb  script.py
experiments/2/: notebook.ipynb  script.py
experiments/2/plots/: complexity_factor_summary.tex  memory_overhead_summary.tex  requests_number_summary.csv  requests_number_summary.tex
experiments/3/: notebook.ipynb  script.py
experiments/4/: script.py
experiments/backup/: script.py
notebooks/: Benchmark Analyses.ipynb
notebooks/experiment_1/: notebook.ipynb  script.py
notebooks/experiment_2/: script.py
